<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".OnboradingFragment.OnBoard2Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:padding="16dp">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_error_outline_24" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/notice"
                android:textColor="#F34D4D"
                android:textSize="20sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/Permission"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/layout1" />

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/subtitle">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_baseline_check_24" />

            <TextView
                android:id="@+id/Quyen1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/Storage"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout2">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_baseline_check_24" />

            <TextView
                android:id="@+id/Quyen2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/SMS"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout3">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_baseline_check_24" />

            <TextView
                android:id="@+id/Quyen3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/Phonebook"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout4">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_baseline_check_24" />

            <TextView
                android:id="@+id/Quyen4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/Contact"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout5">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_baseline_check_24" />

            <TextView
                android:id="@+id/Quyen5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/RecordAudio"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_new1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout6">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_baseline_check_24" />

            <TextView
                android:id="@+id/Quyen_new1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/locationper"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_new2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout_new1">
            <TextView
                android:id="@+id/Quyen_new2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/source"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


