<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".CallServiceActivity">
    <androidx.appcompat.widget.Toolbar
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k_ch_ho_t_d_ch_v"
                android:textSize="23sp"
                android:fontFamily="@font/quicksand_medium"
                android:textColor="@color/white"/>
            <LinearLayout
                android:id="@+id/ghichu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/ttdv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/th_ng_tin_d_ch_v"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:fontFamily="@font/quicksand"/>

                <ImageView
                    android:id="@+id/imghelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_help_outline_24" />

            </LinearLayout>


        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:padding="16dp"
                android:text="@string/timedb"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"

            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_time"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="1"
                android:layout_marginStart="18dp"
                android:inputType="number"
                android:gravity="center"/>

            <Spinner
                android:id="@+id/timespinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kichhoat"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="74dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/bg_button_16_dp"
            android:textColor="@color/white"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="14sp"
            android:textAllCaps="false"/>


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom">

        <Button
            android:id="@+id/btn_next_callservice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_button_16_dp"
            android:text="@string/next"
            android:padding="5dp"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>





</LinearLayout>