<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CallServiceActivity">
    <androidx.appcompat.widget.Toolbar
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Khoichay"
                android:textSize="23sp"
                android:textColor="@color/white"
                android:fontFamily="@font/quicksand_medium"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/th_ng_b_o_khi_ch_y_d_ch_v"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand_bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/ic_baseline_help_outline1_24" />


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xem_chi_ti_t"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:fontFamily="@font/quicksand"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quy_n_t_kh_i_ch_y_ng_d_ng"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand_bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/ic_baseline_help_outline1_24" />


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xem_chi_ti_t"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:fontFamily="@font/quicksand"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_khoichay"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="Khởi chạy"
        android:textColor="@color/white"
        android:background="@drawable/bg_button_16_dp"
        android:textAllCaps="false"
        android:textSize="20sp"/>
</LinearLayout>